client/src/assets/stylus/views/loading-page.styl
@keyframes bounce {
  0% {
    transform: translateY(0px)
  }
  100% {
    transform: translateY(10px)
  }
}

animation()
  animation-name: bounce
  animation-duration: 0.3s
  animation-direction: alternate
  animation-iteration-count: infinite
  animation-timing-function: ease-in-out

.loading-page-container
  width: 100%
  height: calc(var(--vh, 1vh) * 100)
  color: $white
  display: flex
  flex-direction: column
  justify-content: center
  align-items: center

  .page-loader
    display: flex
    justify-content: space-between
    width: 80px
    span
      display: block
      width: 20px
      height: 20px
      border-radius: 50%
      background-color: $white
      &:nth-child(1)
        animation()
        animation-delay: -0.2s
      &:nth-child(2)
        animation()
        animation-delay: -0.1s
      &:nth-child(3)
        animation()
        animation-delay: 0

  p
    margin-top: 35px
    letter-spacing: 4px

